--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>The Ball Game</h1>
-    <div class="ball" onclick="onBallClick()">100</div>
-    <div class="ball2">100</div>
+    <div class="ball" onclick="onBallClick(this, 500)">100</div>
+    <div class="ball ball2" onclick="onBallClick(this, 600)">100</div>
     <script src="js/main.js"></script>
     <script src="js/util.js"></script>
 </body>
