--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <h1>The Ball Game</h1>
-    <div class="ball" onclick="onBallClick(this, 500)">100</div>
-    <div class="ball ball2" onclick="onBallClick(this, 600)">100</div>
+    <div class="ball ball1" onclick="onBallClickIncrease(this, 500)">100</div>
+    <div class="ball ball2" onclick="onBallClickIncrease(this, 600)">100</div>
+    <div class="ball ball3" onclick="onBallClickIncreaseFirstTwo()">100</div>
+    <div class="ball ball4" onclick="onBallClickReduceFirstTwo()">100</div>
     <script src="js/main.js"></script>
     <script src="js/util.js"></script>
 </body>
